--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "jszip": "^3.4.0",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
-    "marks-pane": "^1.0.9",
+    "marks-pane": "github:studnotebook/markspane",
     "path-webpack": "0.0.3",
     "stream-browserify": "^3.0.0",
     "url-polyfill": "^1.1.9",
